# BackEnd/src/api/routes/productRouter.js
@@ -3,6 +3,8 @@ const { validProduct } = require("../middlewares/valid");
 const ProductController = require("../controllers/productController");
 const uploadCloud = require("../../config/cloudinary");
 const { verifyAccessToken } = require("../middlewares/authenticate");
+
+// Create a product
 router.post(
   "/createProduct",
   verifyAccessToken,
@@ -10,14 +12,23 @@ router.post(
   validProduct,
   ProductController.createProduct
 );
+// Search products by name
+router.post("/searchProduct", ProductController.searchProduct);
+// Get all products
 router.get("/getAllProduct", ProductController.getAllProduct);
+
+// Get product by ID
 router.get("/getProductId/:id", ProductController.getProductId);
+router.get("/getProductOfCategory/:id", ProductController.getProductOfCategory);
+// Update a product by ID
 router.patch(
   "/updateProduct/:id",
   verifyAccessToken,
   uploadCloud.single("image"),
   ProductController.updateProduct
 );
+
+// Delete a product by ID
 router.delete(
   "/deleteProduct/:id",
   verifyAccessToken,
